Fix content overflowing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,10 +16,6 @@
 
 @import 'custom';
 
-* {
-  overflow-x: hidden;
-}
-
 .orders {
   .order-container {
     padding: 20px 30px;
